--- a/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -31,7 +31,7 @@
             </div>
             <ng-container *ngIf="timelineItems.length > 0; else noMemories">
                 <div class="space-y-3">
-                    <div *ngFor="let item of timelineItems | slice:0:3"
+                    <div *ngFor="let item of timelineItems "
                         class="flex items-center space-x-3 p-3 bg-pink-50 rounded-lg">
                         <div class="w-2 h-2 bg-pink-500 rounded-full"></div>
                         <div>
