--- a/src/app/web/emotion/emotion.component.html
+++ b/src/app/web/emotion/emotion.component.html
@@ -150,6 +150,9 @@
               <h4 class="text-sm font-semibold mt-4 text-gray-600">Logs:</h4>
               <div class="max-h-48 overflow-y-auto mt-2 space-y-2">
                 <div *ngFor="let entry of getMonthlyLogs('he')" class="text-sm bg-white p-2 rounded shadow ">
+                  <span class="text-xs font-semibold text-pink-700 bg-white px-2 py-1 me-1 rounded-lg shadow">
+                    {{ entry.date | date:'dd MMM' }}
+                  </span>
                   <span class="text-lg">{{ entry.emoji }}</span>
                   <span class="ml-2 font-medium">{{ entry.label }}</span> –
                   <span class="text-gray-500">{{ entry.note || 'No note' }}</span>
@@ -181,6 +184,7 @@
               <h4 class="text-sm font-semibold mt-4 text-gray-600">Logs:</h4>
               <div class="max-h-48 overflow-y-auto mt-2 space-y-2">
                 <div *ngFor="let entry of getMonthlyLogs('she')" class="text-sm bg-white p-2 rounded shadow">
+                  <span class="text-lg">{{ entry.date }}</span>
                   <span class="text-lg">{{ entry.emoji }}</span>
                   <span class="ml-2 font-medium">{{ entry.label }}</span> –
                   <span class="text-gray-500">{{ entry.note || 'No note' }}</span>
@@ -250,19 +254,25 @@
         </div>
 
         <!-- Password -->
-        <div class="text-left mb-6">
-          <label class="block text-sm font-medium mb-1">Password</label>
-          <div class="flex items-center border rounded px-3 py-2">
-            <svg class="w-5 h-5 text-gray-400 mr-2" fill="none" stroke="currentColor" stroke-width="1.5"
-              viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round"
-                d="M12 11c0-.944.737-1.714 1.654-1.714H18a1.714 1.714 0 011.714 1.714v4.572a1.714 1.714 0 01-1.714 1.714h-4.346A1.714 1.714 0 0112 15.572V11z" />
-              <path stroke-linecap="round" stroke-linejoin="round" d="M16 7a2 2 0 00-4 0v4" />
-            </svg>
-            <input [(ngModel)]="password" type="password" class="w-full outline-none"
-              placeholder="Enter your password" />
-          </div>
-        </div>
+      <div class="text-left mb-6">
+  <label class="block text-sm font-medium mb-1">Password</label>
+  <div class="flex items-center border rounded px-3 py-2">
+    <!-- Lock Icon -->
+      <lucide-icon *ngIf="!showPassword" class="w-5 h-5 text-gray-400 mr-2" [name]="Lock"/>
+    <!-- Password Input -->
+    <input [(ngModel)]="password"
+      [type]="showPassword ? 'text' : 'password'"
+      class="w-full outline-none"
+      placeholder="Enter your password" />
+
+    <!-- Toggle Eye Icon -->
+    <button type="button" (click)="showPassword = !showPassword" class="focus:outline-none ml-2">
+      <lucide-icon *ngIf="!showPassword" class="w-5 h-5 text-gray-400 " [name]="Eye"/>
+      <lucide-icon *ngIf="showPassword" class="w-5 h-5 text-gray-400 " [name]="EyeOff"/>
+    </button>
+  </div>
+</div>
+
 
         <!-- Login/Register Button -->
         <button (click)="isLogin() ? login() : register()" [disabled]="loading()"
