--- a/src/app/web/emotion/emotion.component.html
+++ b/src/app/web/emotion/emotion.component.html
@@ -184,7 +184,9 @@
               <h4 class="text-sm font-semibold mt-4 text-gray-600">Logs:</h4>
               <div class="max-h-48 overflow-y-auto mt-2 space-y-2">
                 <div *ngFor="let entry of getMonthlyLogs('she')" class="text-sm bg-white p-2 rounded shadow">
-                  <span class="text-lg">{{ entry.date }}</span>
+                  <span class="text-xs font-semibold text-pink-700 bg-white px-2 py-1 me-1 rounded-lg shadow">
+                    {{ entry.date | date:'dd MMM' }}
+                  </span>
                   <span class="text-lg">{{ entry.emoji }}</span>
                   <span class="ml-2 font-medium">{{ entry.label }}</span> –
                   <span class="text-gray-500">{{ entry.note || 'No note' }}</span>
@@ -254,24 +256,22 @@
         </div>
 
         <!-- Password -->
-      <div class="text-left mb-6">
-  <label class="block text-sm font-medium mb-1">Password</label>
-  <div class="flex items-center border rounded px-3 py-2">
-    <!-- Lock Icon -->
-      <lucide-icon *ngIf="!showPassword" class="w-5 h-5 text-gray-400 mr-2" [name]="Lock"/>
-    <!-- Password Input -->
-    <input [(ngModel)]="password"
-      [type]="showPassword ? 'text' : 'password'"
-      class="w-full outline-none"
-      placeholder="Enter your password" />
+        <div class="text-left mb-6">
+          <label class="block text-sm font-medium mb-1">Password</label>
+          <div class="flex items-center border rounded px-3 py-2">
+            <!-- Lock Icon -->
+            <lucide-icon *ngIf="!showPassword" class="w-5 h-5 text-gray-400 mr-2" [name]="Lock" />
+            <!-- Password Input -->
+            <input [(ngModel)]="password" [type]="showPassword ? 'text' : 'password'" class="w-full outline-none"
+              placeholder="Enter your password" />
 
-    <!-- Toggle Eye Icon -->
-    <button type="button" (click)="showPassword = !showPassword" class="focus:outline-none ml-2">
-      <lucide-icon *ngIf="!showPassword" class="w-5 h-5 text-gray-400 " [name]="Eye"/>
-      <lucide-icon *ngIf="showPassword" class="w-5 h-5 text-gray-400 " [name]="EyeOff"/>
-    </button>
-  </div>
-</div>
+            <!-- Toggle Eye Icon -->
+            <button type="button" (click)="showPassword = !showPassword" class="focus:outline-none ml-2">
+              <lucide-icon *ngIf="!showPassword" class="w-5 h-5 text-gray-400 " [name]="Eye" />
+              <lucide-icon *ngIf="showPassword" class="w-5 h-5 text-gray-400 " [name]="EyeOff" />
+            </button>
+          </div>
+        </div>
 
 
         <!-- Login/Register Button -->
